<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".new_contact"
    android:orientation="vertical"
    android:background="@color/light_pink">

    <Button
        android:layout_width="75dp"
        android:layout_height="25dp"
        android:background="@drawable/button"
        android:onClick="back"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newContact"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="@color/pink"
            android:layout_marginTop="50dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:layout_marginStart="55dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter"
                android:textSize="15sp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginStart="56dp">
            <EditText
                android:id="@+id/name"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginStart="56dp">
            <EditText
                android:id="@+id/surname"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:text="@string/surname"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginStart="56dp">
            <EditText
                android:id="@+id/organisation"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:text="@string/organisation"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginStart="56dp">
            <EditText
                android:id="@+id/phone"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="15sp"
                android:inputType="text|phone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="183.05dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="50dp">
            <Button
                android:id="@+id/button"
                android:layout_width="350dp"
                android:layout_height="70dp"
                android:text="@string/button2"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/button"
                android:onClick="enter"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>